# devops-application-cicd

./: .pre-commit-config.yaml  LICENSE  README.md
.github/actions/build-helper/: action.yml
.github/actions/deploy-helper/: action.yml
.github/scripts/deploy/: deploy-summary.sh  prepare-deploy.py  smoke-test-service.sh  update-ssm-parameter.sh  validate-deploy-config.sh
.github/workflows/: _release.yml  _skip_test-container-image-build-python-aws-ecs.yml  _test-container-image-build-python-aws-ecs.yml  build-test-container.yml  container-image-build-python-aws-ecs.yml  deploy-aws-ecs.yml
actions/build-helper/: action.yml
actions/deploy-helper/: action.yml
docs/: container-image-build-python-aws-ecs.md
fixtures/: __init__.py
fixtures/container_image_app/: Dockerfile  README.md  pyproject.toml
fixtures/container_image_app/app/: __init__.py  greetings.py
fixtures/container_image_app/tests/: test_greetings.py
