[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "container-image-app"
version = "0.1.0"
description = "Fixture application used to test the container-image-build workflow"
readme = "README.md"
authors = [{ name = "UKHSA DevOps", email = "devopsengineeringteam@ukhsa.gov.uk" }]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "ruff==0.6.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-ra"
testpaths = ["tests"]
